# metadata-generator

./: LICENSE  README.md  generator.py  kura-gen.py  pyproject.toml
metadata-generator/: __init__.py
metadata_generator/: __init__.py
src/metadata_generator/: __init__.py
