[tool.poetry]
name = "metadata_generator"
version = "0.1.0"
description = ""
authors = ["Mattia Dal Ben <matthewdibi@gmail.com>"]
license = "MIT license"
readme = "README.md"
packages = [
    { include = "metadata_generator"}
]

[tool.poetry.scripts]
kura-gen = "metadata_generator:run"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
