[project]
name = "metadata-generator"
version = "0.2.0"
description = "Kura projects metadata generator"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "jproperties>=2.1.2",
]

[project.scripts]
kura-gen = "generator:main"

[project.urls]
"Homepage" = "https://github.com/mattdibi/metadata-generator"
"Bug Tracker" = "https://github.com/mattdibi/metadata-generator/issues"
